--- a/index.html
+++ b/index.html
@@ -14,12 +14,67 @@
     <title>Frontend Mentor | Meet landing page</title>
   </head>
   <body>
-    Meet makes it easy to connect with others face-to-face virtually and
-    collaborate across any device. Download v1.3 What is it? 01 Built for modern
-    use Smarter meetings, all in one place Send messages, share files, show your
-    screen, and record your meetings — all in one workspace. Control who can
-    join with invite-only team access, data encryption, and data export. 02
-    Experience more together Stay connected with reliable HD meetings and
-    unlimited one-on-one and group video sessions. Download v1.3
+    <header><img src="./assets/logo.svg" alt="Meet Logo" /></header>
+    <div class="hero">
+      <div class="hero__image__left">
+        <img src="./assets/desktop/image-hero-left.png" alt="" />
+      </div>
+      <div class="hero__content">
+        <h1>Group Chat for Everyone</h1>
+        <p>
+          Meet makes it easy to connect with others face-to-face virtually and
+          collaborate across any device.
+        </p>
+        <a href="#" class="button download">Download v1.3</a>
+        <a href="#" class="button whatisit">What is it?</a>
+      </div>
+      <div class="hero__image__right">
+        <img src="./assets/desktop/image-hero-right.png" alt="" />
+      </div>
+    </div>
+    <div class="meetings">
+      <div class="meetings__images">
+        <img
+          src="./assets/desktop/image-woman-in-videocall.jpg"
+          alt=""
+          class="meetings__image"
+        />
+        <img
+          src="./assets/desktop/image-women-videochatting.jpg"
+          alt=""
+          class="meetings__image"
+        />
+        <img
+          src="./assets/desktop/image-men-in-meeting.jpg"
+          alt=""
+          class="meetings__image"
+        />
+        <img
+          src="./assets/desktop/image-man-texting.jpg"
+          alt=""
+          class="meetings__image"
+        />
+      </div>
+      <div class="meetings__content">
+        <h3>Built for modern use</h3>
+        <h2>Smarter meetings, all in one place</h2>
+        <p>
+          Send messages, share files, show your screen, and record your meetings
+          — all in one workspace. Control who can join with invite-only team
+          access, data encryption, and data export.
+        </p>
+      </div>
+    </div>
+    <footer>
+      <div class="footer__header">Experience more together</div>
+      Stay connected with reliable HD meetings and unlimited one-on-one and
+      group video sessions.
+      <div class="footer__content"></div>
+      <div class="footer__button">
+        <a href="#" class="button download">Download v1.3</a>
+      </div>
+    </footer>
+
+    01 02
   </body>
 </html>
