CSS Styling made responsive for tablet and mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header><img src="./assets/logo.svg" alt="Meet Logo" /></header>
       <div class="hero">
         <div class="hero__image__left">
-          <img src="./assets/desktop/image-hero-left.png" alt="" />
+          <!-- <img src="./assets/desktop/image-hero-left.png" alt="" /> -->
         </div>
         <div class="hero__content">
           <h1>Group Chat<br />for Everyone</h1>
@@ -32,7 +32,7 @@
           <a href="#" class="button button--purple">What is it?</a>
         </div>
         <div class="hero__image__right">
-          <img src="./assets/desktop/image-hero-right.png" alt="" />
+          <!-- <img src="./assets/desktop/image-hero-right.png" alt="" /> -->
         </div>
       </div>
       <div class="numbering"><div class="numbering__text">01</div></div>
