--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | Meet landing page</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <header><img src="./assets/logo.svg" alt="Meet Logo" /></header>
       <div class="hero">
         <div class="hero__image__left">
@@ -38,30 +38,38 @@
       <div class="numbering"><div class="numbering__text">01</div></div>
       <div class="meetings">
         <div class="meetings__images">
-          <img
-            src="./assets/desktop/image-woman-in-videocall.jpg"
-            alt=""
-            class="meetings__image"
-          />
-          <img
-            src="./assets/desktop/image-women-videochatting.jpg"
-            alt=""
-            class="meetings__image"
-          />
-          <img
-            src="./assets/desktop/image-men-in-meeting.jpg"
-            alt=""
-            class="meetings__image"
-          />
-          <img
-            src="./assets/desktop/image-man-texting.jpg"
-            alt=""
-            class="meetings__image"
-          />
+          <div class="meetings__image">
+            <img
+              src="./assets/desktop/image-woman-in-videocall.jpg"
+              alt=""
+              class="meetings__image"
+            />
+          </div>
+          <div class="meetings__image">
+            <img
+              src="./assets/desktop/image-women-videochatting.jpg"
+              alt=""
+              class="meetings__image"
+            />
+          </div>
+          <div class="meetings__image">
+            <img
+              src="./assets/desktop/image-men-in-meeting.jpg"
+              alt=""
+              class="meetings__image"
+            />
+          </div>
+          <div class="meetings__image">
+            <img
+              src="./assets/desktop/image-man-texting.jpg"
+              alt=""
+              class="meetings__image"
+            />
+          </div>
         </div>
         <div class="meetings__content">
-          <h3>Built for modern use</h3>
-          <h2>Smarter meetings, all<br />in one place</h2>
+          <div class="overline">Built for modern use</div>
+          <h2>Smarter meetings, all in one place</h2>
           <p>
             Send messages, share files, show your screen, and record your
             meetings — all in one workspace. Control who can join with
@@ -83,6 +91,6 @@
           >
         </div>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
